--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TriTaptical">
-        <activity android:name=".OnlineLobby"/>
+        <activity
+            android:name=".OnlineLobby"
+            android:parentActivityName=".Login" />
         <activity android:name=".BotLobby" />
         <activity android:name=".Menu" />
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
