--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,10 @@
         android:theme="@style/Theme.TriTaptical">
         <activity
             android:name=".OnlineLobby"
-            android:parentActivityName=".Login" />
+            android:parentActivityName=".Menu" />
         <activity android:name=".BotLobby" />
-        <activity android:name=".Menu" />
+        <activity android:name=".Menu"
+            android:parentActivityName=".Login"/>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
