--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity android:name=".BotLobby" />
         <activity android:name=".Menu"
             android:parentActivityName=".Login"/>
-        <activity android:name=".Login">
+        <activity android:name=".Login"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
